solved overflow width

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,6 @@
 {
 	background-color:#f1c40f
 }
-
-html,body
-{
-	/* box-sizing: border-box; */
-	height:100%;
-	width: 100%;
-}
-
 body
 {
 	font-family:Arial,Helvetica,sans-serif;
@@ -197,14 +189,14 @@ h1
 header
 {
 	flex-direction:column;
-	height:100%
+	height:100vh
 }
 
 .top-header
 {
 	background-color:#fff;
 	justify-content:space-between;
-	padding:30px 0 1px
+	padding:30px 0 1px;
 }
 
 .logo-header
@@ -322,20 +314,24 @@ header
 
 .main-header
 {
-	height:40vw;
+	height:41vw;
 	background-size: cover;
 	background-image:url(../images/banner2.png)
 }
-
 .main-header-text
 {
 	justify-content:space-around;
-	height:40vw;
+	height:41vw;
 	align-items:center;
 	background-color:rgba(0,0,0,0.3)!important;
 	flex-direction:column
 }
+@media (max-width: 992px) {
+	.main-header,.main-header-text{
+		height: 70vh;
+	}
 
+}
 .australia
 {
 	font-family:"nothing-you-could-do",cursive;
@@ -592,7 +588,7 @@ header
 	background-position:  center center;
 	background-size: 100% 100%;
 	padding: 120px 0;
-	margin: 10px;
+	margin: 10px 0;
 	justify-content: center;
 	width: 100%;
 	position: relative;
